added swagger documentation for attachment delete, fact delete and approval put
