# swagger.yaml
@@ -206,6 +206,96 @@ paths:
                 properties:
                   message: 
                     type: string
-
-
-
+  /api/attachment/{attachmentID}:
+    delete:
+      summary: Deletes an attachment by its ID.
+      parameters:
+        - name: attachmentID
+          in: path
+          description: ID of the attachment to be deleted.
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Attachment deleted successfully.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+        '404':
+          description: Attachment not found.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+        '500':
+          description: Server error.
+  /api/fact/{factoidID}:
+    delete:
+      summary: Deletes a fact by its ID.
+      parameters:
+        - name: factoidID
+          in: path
+          description: ID of the factoid to be deleted.
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Fact and associated attachments/tags deleted successfully.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+        '404':
+          description: Fact not found.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+        '500':
+          description: Server error.
+  /api/approve/{id}:
+    put:
+      summary: Approve a fact by ID.
+      parameters:
+        - name: id
+          in: path
+          description: ID of the fact to be approved.
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Fact approved successfully.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+        '404':
+          description: Fact not found.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+        '500':
+          description: Server error.
